lots of SonarLint fixes, some cleanup